--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -9,7 +9,7 @@
 	"compatibility_date": "2025-09-27",
 	"observability": {
 		"enabled": true
-	}
+	},
 	/**
 	 * Smart Placement
 	 * https://developers.cloudflare.com/workers/configuration/smart-placement/#smart-placement
@@ -38,4 +38,21 @@
 	 * https://developers.cloudflare.com/workers/wrangler/configuration/#service-bindings
 	 */
 	// "services": [  {   "binding": "MY_SERVICE",   "service": "my-service"  } ]
+
+	"ai": {
+		"binding": "AI"
+	},
+	"vectorize": [
+		{
+		"binding": "VECTOR_INDEX",
+		"index_name": "feedback-index"
+		}
+	],
+	"d1_databases": [
+		{
+		"binding": "DB",
+		"database_name": "feedback-db",
+		"database_id": "63b00edb-1596-4bdf-b7cf-1c29ceea890f"
+		}
+	]
 }
