--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -32,27 +32,29 @@
 	 * Static Assets
 	 * https://developers.cloudflare.com/workers/static-assets/binding/
 	 */
-	// "assets": {  "directory": "./public/",  "binding": "ASSETS" }
+	"assets": {
+		"directory": "./frontend/dist",
+		"binding": "ASSETS"
+	},
 	/**
 	 * Service Bindings (communicate between multiple Workers)
 	 * https://developers.cloudflare.com/workers/wrangler/configuration/#service-bindings
 	 */
 	// "services": [  {   "binding": "MY_SERVICE",   "service": "my-service"  } ]
-
 	"ai": {
 		"binding": "AI"
 	},
 	"vectorize": [
 		{
-		"binding": "VECTOR_INDEX",
-		"index_name": "feedback-index"
+			"binding": "VECTOR_INDEX",
+			"index_name": "feedback-index"
 		}
 	],
 	"d1_databases": [
 		{
-		"binding": "DB",
-		"database_name": "feedback-db",
-		"database_id": "63b00edb-1596-4bdf-b7cf-1c29ceea890f"
+			"binding": "DB",
+			"database_name": "feedback-db",
+			"database_id": "63b00edb-1596-4bdf-b7cf-1c29ceea890f"
 		}
 	]
 }
